--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>x---0</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+<h1 id="X">X=<span id="result_o"></span></h1>
+<h1 id="O">O=<span id="result_o"></span></h1>
+<script src="./index.js"></script>
+
 </body>
 </html>
