geme tic tac toe sessionStorage

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <title>x---0</title>
 </head>
+
 <body>
-<h1 id="X">X=<span id="result_o"></span></h1>
-<h1 id="O">O=<span id="result_o"></span></h1>
-<script src="./index.js"></script>
+    <h1 id="XnextO">now play is x</h1>
+    <h2 id="X">X=<span id="result_X">0</span></h2>
+    <h2 id="O">O=<span id="result_O">0</span></h2>
+    <script src="./index.js"></script>
 
 </body>
+
 </html>
